# medic-ext-node

./: .tool-versions  Brewfile  CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
.github/workflows/: pkg.yml
.medic/: config.toml
medic-check-node/: Cargo.toml
medic-check-node/src/: lib.rs  main.rs
medic-check-node/src/cli/: app.rs
medic-outdated-node/: Cargo.toml
medic-outdated-node/src/: lib.rs  main.rs
medic-outdated-node/src/cli/: app.rs
medic-outdated-node/src/outdated/: mod.rs
