[workspace]

members = [
    "medic-check-node",
]
resolver = "1"

[workspace.dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.1.4"
indoc = "2.0.1"
medic-lib = "0.1"

[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Medic extension for NodeJS"
edition = "2021"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-ext-node"
version = "0.2.0"
