[package]
name = "medic-outdated-node"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
indoc = { workspace = true }
medic-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
